--- a/liveMedia.vcxproj
+++ b/liveMedia.vcxproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\UsageEnvironment\include;..\groupsock\include;..\BasicUsageEnvironment\include;include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\UsageEnvironment\include;$(SolutionDir)\groupsock\include;$(SolutionDir)\BasicUsageEnvironment\include;$(SolutionDir)\liveMedia\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
